Fix missing colour.

--- a/less/overview.less
+++ b/less/overview.less
@@ -103,6 +103,10 @@
 				background-color: #FFDB00;
 			}
 			&[data-engagement="good"] {
+			    background-color: #6BB82E;
+			    color: #fff;
+			}
+			&[data-engagement="verygood"] {
 			    background-color: #00812F;
 			    color: #fff;
 			}
